--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@supabase/supabase-js": "^2.55.0",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-devtools": "^5.85.5",
+    "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
@@ -35,6 +36,7 @@
     "react-dom": "19.1.0",
     "react-konva": "^19.0.7",
     "server-only": "^0.0.1",
+    "tailwind-merge": "^3.3.1",
     "zod": "^4.1.3"
   },
   "devDependencies": {
