--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^4.0.1",
+    "@prisma/client": "^6.15.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
@@ -32,6 +33,7 @@
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "next": "15.4.6",
+    "prisma": "^6.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-konva": "^19.0.7",
