--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^4.0.1",
-    "@prisma/client": "^6.15.0",
+    "@prisma/client": "6.15.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
