--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-devtools": "^5.85.5",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.18",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
