--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@supabase/supabase-js": "^2.55.0",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-devtools": "^5.85.5",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
     "embla-carousel-react": "^8.6.0",
@@ -40,6 +41,7 @@
     "react-konva": "^19.0.7",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2",
     "zod": "^4.1.3"
   },
   "devDependencies": {
