--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-konva": "^19.0.7",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "zod": "^4.1.3"
   },
@@ -50,6 +51,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/parser": "^8.39.1",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
