--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@notionhq/client": "^4.0.1",
     "@prisma/client": "6.15.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-switch": "^1.2.6",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
     "@tanstack/react-query": "^5.85.5",
