--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "check": "pnpm lint && pnpm type-check",
     "find-unused": "tsx scripts/find-unused-ts-api.ts",
     "clean-unused": "tsx scripts/find-unused-files.ts --delete",
-    "analyze-unused": "tsx scripts/find-unused-files.ts --json"
+    "analyze-unused": "tsx scripts/find-unused-files.ts --json",
+    "compress-image": "tsx scripts/compress-image.ts"
   },
   "dependencies": {
     "@notionhq/client": "^4.0.1",
@@ -63,6 +64,7 @@
     "glob": "^11.0.3",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "sharp": "^0.34.3",
     "tailwindcss": "^4",
     "tsx": "^4.20.3",
     "typescript": "^5"
