--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-konva": "^19.0.7",
+    "react-zoom-pan-pinch": "^3.7.0",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
