--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-switch": "^1.2.6",
+    "@sentry/nextjs": "^10.19.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
     "@tanstack/react-query": "^5.85.5",
@@ -34,6 +35,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "import-in-the-middle": "^1.15.0",
     "konva": "^9.3.22",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
@@ -43,6 +45,7 @@
     "react-dom": "19.1.0",
     "react-konva": "^19.0.7",
     "react-zoom-pan-pinch": "^3.7.0",
+    "require-in-the-middle": "7.5.2",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
