--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.18",
     "embla-carousel-react": "^8.6.0",
+    "flowbite": "^3.1.2",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "konva": "^9.3.22",
