--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "compress-image": "tsx scripts/compress-image.ts"
   },
   "dependencies": {
+    "@contentsquare/tag-sdk": "^1.1.0",
     "@notionhq/client": "^4.0.1",
     "@prisma/client": "6.15.0",
     "@radix-ui/react-dialog": "^1.1.15",
