feat: Integrate @next/third-parties for Google Analytics and enhance signup tracking
- Add @next/third-parties dependency for improved Google Analytics integration
- Refactor GoogleAnalytics component to utilize official GoogleAnalytics from @next/third-parties
- Implement tracking for email signup completion and login modal interactions to enhance user analytics

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@contentsquare/tag-sdk": "^1.1.0",
+    "@next/third-parties": "^15.5.6",
     "@notionhq/client": "^4.0.1",
     "@prisma/client": "6.15.0",
     "@radix-ui/react-dialog": "^1.1.15",
