--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-konva": "^19.0.7",
     "react-zoom-pan-pinch": "^3.7.0",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
