--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "konva": "^9.3.22",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "next": "15.4.6",
@@ -62,6 +63,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/lodash": "^4.17.7",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/parser": "^8.39.1",
