feat: Add transform-review script and update hospital price formatting
- Introduced a new script, transform-review.ts, to handle review transformations with hardcoded API keys.
- Updated the price formatting logic across multiple components to utilize the new formatHospitalPrice utility, ensuring consistent display of hospital pricing information.
- Added a new translation key "priceConsultation" in multiple language dictionaries for improved user clarity regarding consultation pricing.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "find-unused": "tsx scripts/find-unused-ts-api.ts",
     "clean-unused": "tsx scripts/find-unused-files.ts --delete",
     "analyze-unused": "tsx scripts/find-unused-files.ts --json",
-    "compress-image": "tsx scripts/compress-image.ts"
+    "compress-image": "tsx scripts/compress-image.ts",
+    "transform-review": "tsx scripts/transform-review.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.71",
