feat: Add new script for updating hospital sitemap in package.json and enhance sitemap files
- Added "update-sitemap-hospitals" script to package.json for easier sitemap management.
- Updated sitemap files (English, Korean, Thai) to include additional hospital entries and ensure accurate last modified dates.
- Removed outdated hospital entries to maintain relevance and improve SEO.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "clean-unused": "tsx scripts/find-unused-files.ts --delete",
     "analyze-unused": "tsx scripts/find-unused-files.ts --json",
     "compress-image": "tsx scripts/compress-image.ts",
-    "transform-review": "tsx scripts/transform-review.ts"
+    "transform-review": "tsx scripts/transform-review.ts",
+    "update-sitemap-hospitals": "tsx scripts/update-sitemap-hospitals.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.71",
