chore: Update .gitignore to exclude new agent directories
- Added entries for .agents/, .claude/, .windsurf/, and .cursor/ to the .gitignore file to prevent tracking of temporary or sensitive files related to agents.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,8 @@ next-env.d.ts
 
 # scripts with hardcoded API keys (보안상 Git에 커밋하지 마세요)
 scripts/transform-review.ts
+
+.agents/
+.claude/
+.windsurf/
+.cursor/
