feat: Add export functionality for dictionaries to XLSX format
- Introduced a new script command `export-dicts` in the package.json to facilitate the export of dictionaries to XLSX format.
- This addition enhances the functionality of the project by allowing users to easily export and manage dictionary data.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "compress-image": "tsx scripts/compress-image.ts",
     "transform-review": "tsx scripts/transform-review.ts",
     "sync-dicts": "tsx scripts/sync-dictionaries-from-xlsx.ts",
+    "export-dicts": "tsx scripts/export-dictionaries-to-xlsx.ts",
     "read-xlsx": "tsx scripts/read-translation-xlsx.ts"
   },
   "dependencies": {
